prevented overlapping of work topics when screen is mobile using css styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,11 @@ section p {
     opacity: 0.5;
 }
 
+.work h4 {
+    text-align: center; 
+    background-color: var(--backcolor);
+}
+
 .work img {
     height: 200px;
     width: 200px;
@@ -159,6 +164,8 @@ footer {
 
     #about-me > div {
         flex-direction: column;
+        margin-left: 10px;
+        margin-right: 10px;
     }
 
     #about-me p {
@@ -170,20 +177,14 @@ footer {
         width: 100%; 
     }
 
-    .work-topics {
-        flex-direction: column;
-        align-items: center;
-    }
-
     .img-challenge {
         margin-bottom: 20px;
         width: 100%; 
     }
-}
-
-@media screen and (max-width: 1400px) {
-    #about-me > div {
-        margin-left: 10px;
-        margin-right: 10px;
+    
+    .work {
+        margin-bottom: 10px;
+        margin-top: 10px;
     }
 }
+
